[package]
name = "xdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.16.0"
plain = "0.2.3"
chrono = "0.4.19"
structopt = "0.3.21"
lazy_static = "1.4.0"
ctrlc = { version = "3.0", features = ["termination"] }
