[package]
name = "bashreadline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.16.0"
anyhow = "1.0.53"
lazy_static = "1.4.0"
chrono = "0.4.19"
plain = "0.2"
object = { version = "0.28.3", features = ["elf"] }
